<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item
        android:title="@string/action_order_alf"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:id="@+id/action_order_alf_asc"
        android:showAsAction="always"
        android:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:title="@string/action_order_des"
        android:id="@+id/action_order_alf_desc"
        android:showAsAction="never"
        android:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:title="@string/action_order_mon"
        android:id="@+id/action_order_mon"
        android:showAsAction="never"
        android:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:title="@string/action_order_beb"
        android:id="@+id/action_order_beb"
        android:showAsAction="never"
        android:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>